# GradGownRental

./: .env.example  .gitignore  KONG_SETUP.md  README.md  __init__.py  docker-compose.yml  main.py  package-lock.json  pyproject.toml
api-specs/: error-service.openapi.json  fulfill-order-saga.openapi.json  inventory-service.openapi.json  logistics-service.openapi.json  notification-service.openapi.json  order-service.openapi.json  outsystems-logistics.openapi.json  payment-service.openapi.json  place-order-saga.openapi.json  return-order-saga.openapi.json
docs/: SWAGGER_DOCS.md
frontend/: .gitignore  README.md  dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: AdminHeader.vue  AdminSidebar.vue  Header.vue
frontend/src/config/: demoMode.js
frontend/src/router/: index.js
frontend/src/services/: cache.js
frontend/src/views/: ActiveOrdersPage.vue  AdminDashboard.vue  AdminLoginPage.vue  CartView.vue  FulfillmentPage.vue  (+11 more)
kong/: inventory.yaml  kong.yml
sagas/fulfill-order-saga/: Dockerfile  README.md
sagas/place-order-saga/: Dockerfile  README.md  requirements.txt
sagas/return-order-saga/: Dockerfile  README.md  requirements.txt
services/auth-service/: pyproject.toml
services/error-service/: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  swagger_docs.py
services/error-service/app/: __init__.py  models.py  routes.py
services/error-service/db/: init.sql
services/inventory-service/: Dockerfile  README.md  pom.xml  pyproject.toml
services/logistics-service/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  swagger.json
services/notification-service/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
services/notification-service/db/: init.sql
services/notification-service/db/migrations/: 20260407_change_order_id_to_uuid.sql
services/notification-service/src/: app.py  swagger_docs.py
services/notification-service/src/adapters/: sendgrid_adapter.py  twilio_adapter.py
services/notification-service/src/consumer/: notification_consumer.py
services/notification-service/src/controller/: notification_controller.py
services/notification-service/src/model/: notification_log.py
services/notification-service/src/repository/: notification_repository.py
services/notification-service/src/scripts/: publish_pickup_reminder_test_events.py  publish_return_processed_test_events.py
services/notification-service/src/service/: notification_service.py
services/order-service/: APSCHEDULER_DIAGRAMS.md  Dockerfile  README.md  config.py  entrypoint.sh  main.py  migrate.py  migrate_add_sizes.py  postman_collection.json  pyproject.toml  requirements.txt
services/order-service/app/: __init__.py  models.py  routes.py
services/order-service/db/: init.sql
services/order-service/db/migrations/: 20260322_add_damaged_column.sql  20260322_add_deposit_and_delivery_fee.sql  20260405_add_return_reminder_sent_column.sql  20260407_change_order_id_to_uuid.sql  20260407_drop_phone_column.sql
services/order-service/src/: __init__.py  app.py  cli.py  swagger_docs.py
services/order-service/src/controller/: order_controller.py
services/order-service/src/model/: order.py
services/order-service/src/repository/: order_repository.py
services/order-service/src/scheduler/: __init__.py  kafka_event_publisher.py  order_scheduler.py
services/order-service/src/service/: order_service.py
services/payment-service/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  run.py
services/payment-service/app/: __init__.py  kafka_service.py  models.py  stripe_service.py  swagger_docs.py
services/payment-service/app/api/: payment-routes.py  payment_routes.py  webhook.py
services/payment-service/app/service/: kafka_service.py
services/payment-service/db/: init.sql
services/payment-service/migrations/versions/: a1b2c3d4e5f6_add_refunded_to_payment_status_enum.py  c3d4e5f6a7b8_change_order_id_to_uuid.py  d4e5f6a7b8c9_revert_order_id_to_varchar.py
(+102 files in other folders)
