[project]
name = "gradgownrental"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "kafka-python>=2.3.0",
    "payment-service",
]

[tool.uv.sources]
payment-service = { workspace = true }

[tool.uv.workspace]
members = [
    "services/*"
]

# [build-system]
# requires = ["uv_build>=0.10.9,<0.11.0"]
# build-backend = "uv_build"

# [tool.uv.build-backend]
# module-name = "FOO"
# module-root = ""
