[project]
name = "gradgownrental"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.1.0",
    "kafka-python>=2.3.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.1",
]

[tool.uv.sources]
payment-service = { workspace = true }

[tool.uv.workspace]
members = [
    "services/*"
]
exclude = [
    "services/inventory-service"
]

# [build-system]
# requires = ["uv_build>=0.10.9,<0.11.0"]
# build-backend = "uv_build"

# [tool.uv.build-backend]
# module-name = "FOO"
# module-root = ""
