[project]
name = "payment-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-migrate>=4.1.0",
    "gunicorn>=25.1.0",
    "kafka-python>=2.3.0",
    "psycopg[binary]>=3.3.3",
    "stripe>=14.4.1",
]

[tool.setuptools.packages.find]
# where = ["src", "app"]  # list of folders that contain the packages (["."] by default)
include = [ "app"]  # package names should match these glob patterns (["*"] by default)
exclude = [ "db" ]  # exclude packages matching these glob patterns (empty by default)
# namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
